feat: added cloud service component along with integration tests